GNOME Bugzilla – Bug 688774
main: Fix g_critical() on login
Last modified: 2012-11-21 22:08:22 UTC
Commit http://git.gnome.org/browse/gnome-session/commit/?id=34c380508516f8a2f81b68d189b24fedb05870ea caused us to emit a g_critical because we were passing NULL for the user data, when the callback expected a GsmManager. Fixing this requires passing the user data later.
Created attachment 229533 [details] [review] main: Fix g_critical() on login
Review of attachment 229533 [details] [review]: Looks good.
Attachment 229533 [details] pushed as 854edad - main: Fix g_critical() on login