main: Fix g_critical() on login

Commit
http://git.gnome.org/browse/gnome-session/commit/?id=34c380508516f8a2f81b68d189b24fedb05870ea
caused us to emit a g_critical because we were passing NULL for the
user data, when the callback expected a GsmManager.  Fixing this
requires passing the user data later.

https://bugzilla.gnome.org/show_bug.cgi?id=688774