gnome-session/main.c
@@ -157,11 +157,6 @@ acquire_name (void)
                 return FALSE;
         }
 
-        g_signal_connect_swapped (bus_proxy,
-                                  "destroy",
-                                  G_CALLBACK (shutdown_cb),
-                                  NULL);
-
         if (! acquire_name_on_proxy (bus_proxy, GSM_DBUS_NAME) ) {
                 gsm_util_init_error (TRUE,
                                      "%s",
@@ -331,6 +326,11 @@ main (int argc, char **argv)
         }
 
         manager = gsm_manager_new (client_store, failsafe);
+
+        g_signal_connect_swapped (bus_proxy,
+                                  "destroy",
+                                  G_CALLBACK (shutdown_cb),
+                                  manager);
 
         g_unix_signal_add (SIGTERM, term_or_int_signal_cb, manager);
         g_unix_signal_add (SIGINT, term_or_int_signal_cb, manager);
